--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /* Tag selector to select the 'body' element */
 body {
   /* Your code here! */
+  <div>width: 700px
+  margin: auto
+  font-family: "Helvectica Neue"
+  background: white
+  padding: 30px</div>
+  
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
